syntax = "proto2";
package ascend;


enum action_cmd_enum{
  TAKEOFF = 0;
  LAND = 1;
  PICKUP_PACKAGE = 2;
  DROPOFF_PACKAGE = 3;
}

message heartbeat_msg {
  required double lat = 1;
  required double lng = 2;
  required double alt = 3;
  required int32 bat_percentage = 4;
}

message move_offset {
  required float x = 1;
  required float y = 2;
  required float z = 3;
  required float rate = 4;
  optional float yaw = 5;
}

message stop_remote_conn {
  required bool succ = 1;
}

message action_cmd_msg {
  required action_cmd_enum cmd = 1;
}

message msg {
  required string name = 1;
  oneof type {
    heartbeat_msg heartbeat = 2;
    move_offset offset = 6;
    stop_remote_conn stop_remote = 11;
    action_cmd_msg action_cmd = 12;
  }
}   
